@@ -1,0 +1,31 @@
+;;;
+;;;  mm_avdevicelib.stub
+;;;
+;;;   Copyright (C) 2008 Takeshi Abe. All rights reserved.
+;;;
+;;;   This library is free software; you can redistribute it and/or
+;;;   modify it under the terms of the GNU Lesser General Public
+;;;   License as published by the Free Software Foundation; either
+;;;   version 2.1 of the License, or (at your option) any later version.
+;;;
+;;;   This library is distributed in the hope that it will be useful,
+;;;   but WITHOUT ANY WARRANTY; without even the implied warranty of
+;;;   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+;;;   Lesser General Public License for more details.
+;;;
+;;;   You should have received a copy of the GNU Lesser General Public
+;;;   License along with this library; if not, write to the Free Software
+;;;   Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+;;;
+;;;  $Id$
+
+"#include \"mm_avdevice.h\""
+
+(include "mm_avdevice.types")
+
+(define-cproc avdevice-version ()
+  (expr <const-cstring> "AV_STRINGIFY(LIBAVDEVICE_VERSION)"))
+
+;; Local variables:
+;; mode: scheme
+;; end:
