@@ -1,7 +1,7 @@
 ;;;
 ;;;  ffmpeg.scm
 ;;;
-;;;   Copyright (C) 2006,2007 Takeshi Abe. All rights reserved.
+;;;   Copyright (C) 2006-2008 Takeshi Abe. All rights reserved.
 ;;;
 ;;;   This library is free software; you can redistribute it and/or
 ;;;   modify it under the terms of the GNU Lesser General Public
@@ -20,7 +20,7 @@
 ;;;  $Id$
 
 (define-module multimedia.ffmpeg
-  (extend multimedia.avcodec multimedia.avformat)
+  (extend multimedia.avcodec multimedia.avformat multimedia.avdevice)
   (export open-input-acodec
 		  open-input-vcodec
 		  open-input-avcodec
