@@ -1,3 +1,14 @@
+2008-01-22  Takeshi Abe  <tabe@fixedpoint.jp>
+
+	* mm_avcodec.c, mm_avcodec.h, mm_avcodec.types, mm_avcodeclib.stub: new.
+	They serves to provide the skelton of libavdevice.
+	* multimedia/avdevice.scm: ditto.
+
+	* test/test.scm: check avdevice-version.
+	* Makefile.in: build mm_avdevice; added -lavdevice to libs.
+	* mm_ffmpeg.h: include mm_avdevice.h.
+	* multimedia/ffmpeg.scm: extend multimedia.avdevice.
+
 2007-12-18  Takeshi Abe  <tabe@fixedpoint.jp>
 
 	* multimedia/ffmpeg.scm (call-with-input-avcodec): changed its semantics;
